--- a/android/src/main/res/layout/activity_stripe.xml
+++ b/android/src/main/res/layout/activity_stripe.xml
@@ -15,11 +15,25 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         />
-    <Button
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Save"
-        android:id="@+id/buttonSave"/>
+        android:layout_gravity="center"
+        android:layout_marginTop="20dp"
+        android:orientation="horizontal">
+        <Button
+            android:layout_width="80dp"
+            android:layout_height="wrap_content"
+            android:text="Save"
+            android:id="@+id/buttonSave"/>
+        <Button
+            android:layout_width="80dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="40dp"
+            android:text="Cancel"
+            android:id="@+id/buttonCancel"/>
+    </LinearLayout>
+
 
     <android.support.v4.widget.ContentLoadingProgressBar
         style="@style/Widget.AppCompat.ProgressBar"
